--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="BlogTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="BlogTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:windowBackground">@color/app_bg_color</item>
         <item name="app_bg">@color/app_bg_color</item>
         <item name="normal_tv">@color/main_tv</item>
