--- a/baselib/src/main/res/layout/frag_filter_layout.xml
+++ b/baselib/src/main/res/layout/frag_filter_layout.xml
@@ -14,32 +14,36 @@
         app:layout_constraintBottom_toTopOf="@+id/bt_reset"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-    <Button
+    <!--    backgroundTint可以设置为@empty-->
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/bt_reset"
+        style="@style/md_btn_style"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/shape_order_bottom_left"
+        android:layout_height="50dp"
         android:text="重置条件"
-        android:textColor="@color/colorPrimary"
-        android:textSize="17sp"
+        android:textColor="@color/btn_color"
+        app:backgroundTint="@color/white"
+        app:cornerRadius="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/bt_confirm" />
+        app:layout_constraintRight_toLeftOf="@+id/bt_confirm"
+        app:rippleColor="@color/ripple_color"
+        app:strokeColor="@color/colorPrimary"
+        app:strokeWidth="1dp" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/bt_confirm"
+        style="@style/md_btn_style"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/shape_order_bottom_right"
+        android:layout_height="50dp"
         android:text="确定"
         android:textColor="@color/white"
-        android:textSize="17sp"
+        app:backgroundTint="@color/colorPrimary"
+        app:cornerRadius="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintLeft_toRightOf="@+id/bt_reset"
         app:layout_constraintRight_toRightOf="parent" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
