--- a/app/src/main/res/layout/frag_manager_login.xml
+++ b/app/src/main/res/layout/frag_manager_login.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:layoutAnimation="@null"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layoutAnimation="@anim/layout_fall_down">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/lock_iv"
