--- a/app/src/main/res/layout/act_base_wall.xml
+++ b/app/src/main/res/layout/act_base_wall.xml
@@ -1,21 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <include layout="@layout/v_toolbar" />
 
     <FrameLayout
         android:id="@+id/wall_frame"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appBar" />
+        android:layout_height="match_parent" />
 
     <com.app.xandone.widgetlib.view.LoadingLayout
         android:id="@+id/loadLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
